--- a/src/styles.css
+++ b/src/styles.css
@@ -2,19 +2,33 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 5px;
+        border-radius: 50% 0% 50% 0%;
+        font-weight: bold;
+        font-size: large;
+        color: black;
+    
+        background: #F7FAFC;
+        border: 3px solid #A0AEC0;
+    }
 
-    /*
-    Using red.50 and red.300 from chakra's default theme
-    https://chakra-ui.com/docs/styled-system/theme
-    */
+/*
+Using colors from chakra's default theme: gray, red, yellow, green
+ https: //chakra-ui.com/docs/styled-system/theme
+*/
+.bici-icon.green {
+    background: #F0FFF4;
+    border: 3px solid #9AE6B4;
+}
+
+.bici-icon.yellow {
+    background: #FFFFF0;
+    border: 3px solid #FBD38D;
+}
+
+.bici-icon.red {
     background: #FFF5F5;
     border: 3px solid #FC8181;
-
-    padding: 5px;
-    border-radius: 50% 0% 50% 0%;
-    font-weight: bold;
-    font-size: large;
-    color: black;
 }
 
 .bici-icon span {
