Move style stuff to css file

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,30 +3,36 @@
     align-items: center;
     justify-content: space-between;
     padding: 5px;
-        border-radius: 50% 0% 50% 0%;
-        font-weight: bold;
-        font-size: large;
-        color: black;
-    
-        background: #F7FAFC;
-        border: 3px solid #A0AEC0;
-    }
+    opacity: 0.6;
+    width: 55px !important;
+    height: 40px !important;
+    border-radius: 50% 0% 50% 0%;
+    font-weight: bold;
+    font-size: large;
+    color: black;
+
+    background: #F7FAFC;
+    border: 3px solid #A0AEC0;
+}
 
 /*
 Using colors from chakra's default theme: gray, red, yellow, green
  https: //chakra-ui.com/docs/styled-system/theme
 */
 .bici-icon.green {
+    opacity: 1;
     background: #F0FFF4;
     border: 3px solid #9AE6B4;
 }
 
 .bici-icon.yellow {
+    opacity: 1;
     background: #FFFFF0;
     border: 3px solid #FBD38D;
 }
 
 .bici-icon.red {
+    opacity: 1;
     background: #FFF5F5;
     border: 3px solid #FC8181;
 }
